--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@types/jest": "^25.1.0",
     "@typescript-eslint/eslint-plugin": "^2.15.0",
     "@typescript-eslint/parser": "^2.15.0",
+    "apollo-server-integration-testing": "^2.3.0",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
     "husky": "^4.0.6",
-    "jest": "^24.9.0",
+    "jest": "^25.5.4",
     "ts-jest": "^25.1.0",
     "typescript": "^3.7.4"
   },
@@ -28,5 +29,12 @@
     "hooks": {
       "pre-commit": "yarn lint"
     }
+  },
+  "dependencies": {
+    "@types/express": "^4.17.6",
+    "apollo-server-express": "^2.12.0",
+    "express": "^4.17.1",
+    "graphql": "^14.0.0",
+    "quick-trie": "^1.1.1"
   }
 }
